tests/parser/syntax-errors/expected-expr/expected_expr_and_expr.choc
# RUN: choco-opt "%s" | filecheck "%s"

True and

# CHECK:      SyntaxError (line 3, column 9): Expected expression.
# CHECK-NEXT: >>>True and
# CHECK-NEXT: >>>--------^
